@@ -1,49 +1,44 @@
 (import (rnrs)
         (mosh)
-        (match))
-
-;; (match (list 'hige 1 2 3)
-;;   [('hige x y . z)
-;;    (format #t "x=~a y=~a" x y)])
-
-(match '(0 (1 2) (3 4 5))
-  ((a (b c) (d e f))
-   (list a b c d e f)))
-
- 	
-
-(display (match 123
-  ((? string? x) (list 'string x))
-  ((? number? x) (list 'number x))))
-
- 	
-
-;; (match '(the answer is 42)
-;;   (`(the answer is ,value) value)
-;;   (else #f))
+        (match)
+        (only (srfi :19) current-date date->string)
+        (mosh socket))
 
 
-;        (mosh socket))
 
-;; (define (print x)
-;;   (display x)
-;;   (newline))
+(define (irc-bot server port nick channel irc-client)
+  (let ([socket (make-client-socket server port)])
+    (define (send text)
+      (assert (<= (string-length text) 510))
+      (socket-send socket (string->utf8 (string-append text "\r\n"))))
+    (define (recv)
+      (utf8->string (socket-recv socket 512)))
+    (define (say text)
+      (send (format "PRIVMSG ~a :~a" channel text)))
+    (send (format "NICK ~a" nick))
+    (send (format "USER ~a 0 * :~a" nick nick))
+    (send (format "JOIN ~a" channel))
+    (call/cc (lambda (return)
+    (let loop ([data (recv)])
+      (cond
+       [(zero? (string-length data)) '()]
+       [(#/:([^!]+).*PRIVMSG[^:]+:(.*)/ data) =>
+        (lambda (m)
+          (irc-client (list 'PRIVMSG (m 1) (m 2)) return say send))]
+       [(#/^PING/ data)
+        (send "PONG 0")]
+       [(#/:.*433.*Nickname is already in use.*/ data)
+        (irc-client (list 'ERROR 433) return say send)
+        ])
+      (loop (recv)))))
+    (socket-close socket)))
 
-;; (print    AF_INET)
-;; (print    AF_INET6)
-;; (print     AF_UNSPEC)
-;; (print     SOCK_STREAM)
-;; (print     SOCK_DGRAM)
-;; (print     AI_ADDRCONFIG)
-;; (print     AI_ALL)
-;; (print     AI_CANONNAME)
-;; (print     AI_NUMERICHOST)
-;; (print     AI_NUMERICSERV)
-;; (print     AI_PASSIVE)
-;; (print     AI_V4MAPPED)
-;; (print     IPPROTO_TCP)
-;; (print     IPPROTO_UDP)
-;; (print     IPPROTO_RAW)
-;; (print     SHUT_RD)
-;; (print     SHUT_WR)
-;; (print     SHUT_RDWR)
+(irc-bot "irc.freenode.net" "6666" "kaela" "#higepon"
+         (lambda (msg return privmsg send)
+           (match msg
+             [('PRIVMSG who message)
+              (format #t "~a <~a> ~a\n" (date->string (current-date) "~H:~M") who message)]
+             [('ERROR 433)
+              (error 'irc "Nickname is already in use")]
+             [('ERROR e)
+              (return e)])))
